--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,15 @@ body{
    margin: 0px;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
+   flex-direction: row;
+   gap: 3rem;
+   margin: 0 20px;
 }
 
 #pageContent{
-   width: 1200px;
-   display: flex;
-   flex-direction: column;
+   width: 75rem;
    margin: auto;
+   flex: 2;
 }
 
 #header{
@@ -53,6 +55,7 @@ body{
 
 .productImage{
    max-width: 100%;
+   border-radius: 5px;
 }
 
 .addToCart{
@@ -70,11 +73,12 @@ body{
 }
 
 #cartContent{
-   width: 600px;
+   max-width: 36rem;
+   width: 90%;
    display: flex;
    flex-direction: column;
-   margin: 100px 20px;
-   height: 300px;
+   margin: 100px auto;
+   flex: 1;
 }
 
 
